--- a/Tinkoff Fintech App/ProfileViewController/Base.lproj/Profile.storyboard
+++ b/Tinkoff Fintech App/ProfileViewController/Base.lproj/Profile.storyboard
@@ -49,7 +49,7 @@ Moscow, Russia</string>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="f6y-us-lRk">
                                         <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
-                                        <color key="backgroundColor" red="0.89058679340000002" green="0.90760642290000004" blue="0.1654500663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" red="0.89451497790000001" green="0.91149806980000003" blue="0.16960212590000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DD" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="60" translatesAutoresizingMaskIntoConstraints="NO" id="zKQ-GD-Orh">
                                         <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
@@ -114,6 +114,8 @@ Moscow, Russia</string>
                     </navigationItem>
                     <connections>
                         <outlet property="editButton" destination="Aq8-em-boW" id="D9T-Vw-7hH"/>
+                        <outlet property="informationLabel" destination="fV5-Du-2u8" id="C55-1l-aWf"/>
+                        <outlet property="nameLabel" destination="fTC-MC-RMS" id="Hh6-um-xzj"/>
                         <outlet property="profileAvatarView" destination="5Pb-zP-anh" id="db7-UA-Q9v"/>
                     </connections>
                 </viewController>
