--- a/Tinkoff Fintech App/ProfileViewController/Base.lproj/Profile.storyboard
+++ b/Tinkoff Fintech App/ProfileViewController/Base.lproj/Profile.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Danila Dobrorolyubov" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fTC-MC-RMS">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Danila Dobrorolyubov" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="fTC-MC-RMS">
                                 <rect key="frame" x="82" y="386" width="211" height="26.5"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="26.5" id="DgB-kr-lI4"/>
@@ -26,8 +26,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fV5-Du-2u8">
-                                <rect key="frame" x="70.5" y="432.5" width="238" height="41"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="fV5-Du-2u8">
+                                <rect key="frame" x="62.5" y="432.5" width="238" height="56"/>
                                 <string key="text">MAI student, IOS Dev, begginer
 Moscow, Russia</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -35,7 +35,7 @@ Moscow, Russia</string>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aq8-em-boW">
-                                <rect key="frame" x="62.5" y="590" width="250" height="40"/>
+                                <rect key="frame" x="62.5" y="607" width="250" height="40"/>
                                 <color key="backgroundColor" red="0.96462148430000005" green="0.96475988629999998" blue="0.96459120509999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="8r5-iE-VrN"/>
@@ -95,12 +95,12 @@ Moscow, Russia</string>
                             <constraint firstItem="fTC-MC-RMS" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="6C8-w9-RxR"/>
                             <constraint firstItem="Aq8-em-boW" firstAttribute="centerX" secondItem="fTC-MC-RMS" secondAttribute="centerX" id="6hY-5a-sWA"/>
                             <constraint firstItem="5Pb-zP-anh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="7A1-bJ-gYi"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Aq8-em-boW" secondAttribute="bottom" constant="37" id="IOT-FF-5p1"/>
+                            <constraint firstItem="fV5-Du-2u8" firstAttribute="leading" secondItem="TwF-Df-qXq" secondAttribute="leading" id="Gy5-Ck-eKf"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Aq8-em-boW" secondAttribute="bottom" constant="20" id="IOT-FF-5p1"/>
                             <constraint firstItem="Aq8-em-boW" firstAttribute="top" relation="lessThanOrEqual" secondItem="fV5-Du-2u8" secondAttribute="bottom" constant="118.5" id="K1z-1B-7uE"/>
                             <constraint firstItem="5Pb-zP-anh" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="QTu-kj-UZV"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="fV5-Du-2u8" secondAttribute="trailing" constant="20" id="Z7k-XU-b9E"/>
                             <constraint firstItem="Aq8-em-boW" firstAttribute="width" secondItem="5Pb-zP-anh" secondAttribute="width" id="de6-Vt-ViE"/>
-                            <constraint firstItem="fV5-Du-2u8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="70.5" id="rDr-UV-xra"/>
                             <constraint firstItem="5Pb-zP-anh" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.666667" id="yjV-5X-wG8"/>
                         </constraints>
                     </view>
